# Case-Study-Loan-Default-Prediction

./: .gitignore  README.md  loan-default-prediction.ipynb  loan-default-prediction.py  mlflow.db  pyproject.toml  requirements.txt  requirments.txt
src/loan_default/: __init__.py
src/loan_default/utils/: __init__.py  imputation.py  modeling.py  preprocessing.py  stats.py
