[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loan-default-prediction"
version = "0.1.0"
description = "Utilities and modeling pipeline for loan default prediction"
authors = [{ name = "Your Name" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlflow",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
    "scipy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/loan_default"]
